Updated Portfolio with info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sleek Developer Portfolio</title>
+    <title>Mohammed Hussein - Software Engineer</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Use Inter Font -->
@@ -142,7 +142,7 @@
             href="#about"
             class="text-2xl font-extrabold tracking-tight text-default-color transition duration-300 hover:text-primary-color"
           >
-            [Your Name]
+            Mohammed Hussein
           </a>
 
           <!-- Desktop Menu -->
@@ -239,21 +239,21 @@
     </header>
 
     <main
-      class="container mx-auto px-4 sm:px-6 lg:px-8 mt-8 py-12 space-y-24 md:space-y-32"
+      class="container mx-auto px-6 sm:px-6 lg:px-8 mt-0 py-12 space-y-24 md:space-y-32"
     >
       <!-- 1. About Me / Hero Section -->
-      <section id="about" class="pt-10 md:pt-10 pb-20 fade-in-section">
+      <section id="about" class="pt-0 md:pt-10 pb-20 fade-in-section">
         <div class="flex flex-col md:flex-row items-center gap-10 md:gap-16">
           <div class="md:w-1/2 order-2 md:order-1 text-center md:text-left">
             <p class="text-primary-color font-semibold mb-2">Hello, I'm</p>
             <h1
               class="text-5xl md:text-6xl lg:text-7xl font-extrabold leading-tight tracking-tighter text-default-color mb-6"
             >
-              Alex Thompson
+              Mohammed Hussein
             </h1>
             <p class="text-xl text-muted-color mb-8 max-w-xl">
               A passionate
-              <span class="text-secondary-color">Full-Stack Developer</span>
+              <span class="text-secondary-color">Software Engineer</span>
               focused on building exceptional digital experiences. I specialize
               in turning complex problems into elegant, user-friendly solutions.
             </p>
@@ -268,7 +268,7 @@
           <div class="md:w-1/2 order-1 md:order-2 flex justify-center">
             <!-- Slightly smaller image on all screens -->
             <div
-              class="w-[80%] sm:w-[75%] md:w-[65%] lg:w-[60%] overflow-hidden rounded-2xl bg-card shadow-2xl shadow-blue-500/30"
+              class="w-[75%] sm:w-[75%] md:w-[65%] lg:w-[60%] overflow-hidden rounded-2xl bg-card shadow-2xl shadow-blue-500/30"
             >
               <img
                 src="img/medddd.jpg"
@@ -311,16 +311,16 @@
             <p class="text-sm text-muted-color">Core Logic</p>
           </div>
 
-          <!-- Skill Card 3: React -->
+          <!-- Skill Card 3: C# / .NET -->
           <div
             class="p-6 bg-card rounded-xl shadow-xl hover:bg-card-hover transition duration-300 transform hover:scale-[1.02] text-center group"
           >
             <i
-              data-lucide="atom"
+              data-lucide="server"
               class="w-8 h-8 mx-auto mb-3 text-secondary-color group-hover:animate-spin"
             ></i>
-            <p class="font-semibold text-default-color">React/Vue</p>
-            <p class="text-sm text-muted-color">Frontend Frameworks</p>
+            <p class="font-semibold text-default-color">C# / .NET</p>
+            <p class="text-sm text-muted-color">ASP.NET MVC</p>
           </div>
 
           <!-- Skill Card 4: Node.js -->
@@ -343,20 +343,68 @@
               data-lucide="database"
               class="w-8 h-8 mx-auto mb-3 text-secondary-color"
             ></i>
-            <p class="font-semibold text-default-color">PostgreSQL</p>
+            <p class="font-semibold text-default-color">MS SQL Server</p>
             <p class="text-sm text-muted-color">Data Management</p>
           </div>
 
-          <!-- Skill Card 6: Cloud -->
+          <!-- Skill Card 6: Python -->
           <div
             class="p-6 bg-card rounded-xl shadow-xl hover:bg-card-hover transition duration-300 transform hover:scale-[1.02] text-center group"
           >
             <i
-              data-lucide="cloud"
+              data-lucide="terminal"
               class="w-8 h-8 mx-auto mb-3 text-secondary-color group-hover:animate-pulse"
             ></i>
-            <p class="font-semibold text-default-color">AWS/Azure</p>
-            <p class="text-sm text-muted-color">Cloud Hosting</p>
+            <p class="font-semibold text-default-color">Python</p>
+            <p class="text-sm text-muted-color">LangChain/AI Dev</p>
+          </div>
+
+          <!-- Skill Card 7: GitHub -->
+          <div
+            class="p-6 bg-card rounded-xl shadow-xl hover:bg-card-hover transition duration-300 transform hover:scale-[1.02] text-center group"
+          >
+            <i
+              data-lucide="git-branch"
+              class="w-8 h-8 mx-auto mb-3 text-secondary-color group-hover:animate-pulse"
+            ></i>
+            <p class="font-semibold text-default-color">Git/GitHub</p>
+            <p class="text-sm text-muted-color">Version Control</p>
+          </div>
+
+          <!-- Skill Card 8: Prompt Engineering -->
+          <div
+            class="p-6 bg-card rounded-xl shadow-xl hover:bg-card-hover transition duration-300 transform hover:scale-[1.02] text-center group"
+          >
+            <i
+              data-lucide="brain"
+              class="w-8 h-8 mx-auto mb-3 text-secondary-color group-hover:animate-pulse"
+            ></i>
+            <p class="font-semibold text-default-color">Prompt Engineering</p>
+            <p class="text-sm text-muted-color">LLMs (e.g., ChatGPT)</p>
+          </div>
+
+          <!-- Skill Card 9: Java -->
+          <div
+            class="p-6 bg-card rounded-xl shadow-xl hover:bg-card-hover transition duration-300 transform hover:scale-[1.02] text-center group"
+          >
+            <i
+              data-lucide="code"
+              class="w-8 h-8 mx-auto mb-3 text-secondary-color group-hover:animate-pulse"
+            ></i>
+            <p class="font-semibold text-default-color">Java</p>
+            <p class="text-sm text-muted-color">Core Java Concepts</p>
+          </div>
+
+          <!-- Skill Card 8: Public Speaking -->
+          <div
+            class="p-6 bg-card rounded-xl shadow-xl hover:bg-card-hover transition duration-300 transform hover:scale-[1.02] text-center group"
+          >
+            <i
+              data-lucide="mic"
+              class="w-8 h-8 mx-auto mb-3 text-secondary-color group-hover:animate-pulse"
+            ></i>
+            <p class="font-semibold text-default-color">Public Speaking</p>
+            <p class="text-sm text-muted-color">Confident Communication</p>
           </div>
         </div>
       </section>
@@ -379,31 +427,31 @@
             >
               <div class="h-48 mb-4 rounded-lg overflow-hidden">
                 <img
-                  src="https://via.placeholder.com/300x160/1e293b/f1f5f9?text=App+Screenshot+1"
-                  alt="SaaS Platform Rebuild"
+                  src="img/FashionHub.JPG"
+                  alt="FashionHub: AI-Powered Fashion Recommendation"
                   class="object-cover w-full h-full"
                 />
               </div>
               <h3 class="text-xl font-bold mb-2 text-default-color">
-                SaaS Platform Rebuild
+                FashionHub: AI-Powered Fashion Recommendation
               </h3>
               <p class="text-muted-color mb-4 text-sm">
-                Modernized a legacy subscription service using React and
-                Node.js, boosting performance by 40%.
+                Provides personalized Ghanaian fashion suggestions that promote
+                cultural identity and help users dress confidently.
               </p>
               <div class="flex flex-wrap gap-2">
                 <span
                   class="text-xs font-medium bg-blue-900 text-blue-300 px-4 py-2 rounded-full"
-                  >React</span
+                  >Live Demo</span
                 >
                 <span
                   class="text-xs font-medium bg-blue-900 text-blue-300 px-4 py-2 rounded-full"
-                  >Node.js</span
+                  >GitHub</span
                 >
-                <span
+                <!-- <span
                   class="text-xs font-medium bg-blue-900 text-blue-300 px-4 py-2 rounded-full"
                   >Tailwind CSS</span
-                >
+                > -->
               </div>
             </div>
 
@@ -413,31 +461,32 @@
             >
               <div class="h-48 mb-4 rounded-lg overflow-hidden">
                 <img
-                  src="https://via.placeholder.com/300x160/1e293b/f1f5f9?text=App+Screenshot+2"
+                  src="img/Nature's Nook.JPG"
                   alt="Data Visualization Dashboard"
                   class="object-cover w-full h-full"
                 />
               </div>
               <h3 class="text-xl font-bold mb-2 text-default-color">
-                Data Visualization Dashboard
+                Nature's Nook: Eco-Friendly Plants Marketplace
               </h3>
               <p class="text-muted-color mb-4 text-sm">
-                Built a real-time analytics dashboard with D3.js charts and a
-                responsive Angular frontend.
+                An online plant store where customers can easily browse and
+                purchase the best plants, offering a seamless and engaging
+                shopping experience.
               </p>
               <div class="flex flex-wrap gap-2">
                 <span
                   class="text-xs font-medium bg-blue-900 text-blue-300 px-4 py-2 rounded-full"
-                  >Angular</span
+                  >Live Demo</span
                 >
                 <span
                   class="text-xs font-medium bg-blue-900 text-blue-300 px-4 py-2 rounded-full"
-                  >D3.js</span
+                  >GitHub</span
                 >
-                <span
+                <!-- <span
                   class="text-xs font-medium bg-blue-900 text-blue-300 px-4 py-2 rounded-full"
                   >TypeScript</span
-                >
+                > -->
               </div>
             </div>
 
@@ -447,7 +496,7 @@
             >
               <div class="h-48 mb-4 rounded-lg overflow-hidden">
                 <img
-                  src="https://via.placeholder.com/300x160/1e293b/f1f5f9?text=App+Screenshot+3"
+                  src="img/medddd.jpg"
                   alt="E-commerce Microservice"
                   class="object-cover w-full h-full"
                 />
@@ -505,13 +554,35 @@
             class="flex-1 bg-card p-8 rounded-2xl shadow-xl border-t-4 border-secondary-color transition hover:scale-[1.02] duration-300"
           >
             <p class="text-lg italic text-muted-color mb-6 leading-relaxed">
-              “Alex’s ability to simplify complex technical challenges is
+              “Mohammed is a strategic thinker who inspires his team. His vision
+              for the company's growth has been instrumental, and his guidance
+              has led to consistent, high-quality results.”
+            </p>
+            <div class="flex items-center gap-4">
+              <img
+                src="img/medddd.jpg"
+                alt="Jane Doe"
+                class="w-12 h-12 rounded-full object-cover"
+              />
+              <div>
+                <p class="font-semibold text-default-color">Jane Doe</p>
+                <p class="text-sm text-muted-color">CTO at Innovatech</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Testimonial 1 -->
+          <div
+            class="flex-1 bg-card p-8 rounded-2xl shadow-xl border-t-4 border-secondary-color transition hover:scale-[1.02] duration-300"
+          >
+            <p class="text-lg italic text-muted-color mb-6 leading-relaxed">
+              “Mohammed’s ability to simplify complex technical challenges is
               unmatched. The project was delivered ahead of schedule and
               exceeded all metrics.”
             </p>
             <div class="flex items-center gap-4">
               <img
-                src="https://via.placeholder.com/60"
+                src="img/medddd.jpg"
                 alt="Jane Doe"
                 class="w-12 h-12 rounded-full object-cover"
               />
@@ -527,12 +598,12 @@
             class="flex-1 bg-card p-8 rounded-2xl shadow-xl border-t-4 border-secondary-color transition hover:scale-[1.02] duration-300"
           >
             <p class="text-lg italic text-muted-color mb-6 leading-relaxed">
-              “The interface he designed was beautiful and intuitive. Alex truly
-              understands modern design and accessibility.”
+              “The interface he designed was beautiful and intuitive. Mohammed
+              trulyunderstands modern design and accessibility.”
             </p>
             <div class="flex items-center gap-4">
               <img
-                src="https://via.placeholder.com/60"
+                src="img/medddd.jpg"
                 alt="Mark Chen"
                 class="w-12 h-12 rounded-full object-cover"
               />
@@ -573,9 +644,9 @@
                 class="w-5 h-5 text-secondary-color mr-3"
               ></i>
               <a
-                href="mailto:alex.thompson@example.com"
+                href="mailto:husmoh233@gmail.com"
                 class="text-muted-color hover:text-default-color transition"
-                >alex.thompson@example.com</a
+                >husmoh233@gmail.com</a
               >
             </div>
             <div class="flex items-center justify-center md:justify-start">
@@ -584,9 +655,9 @@
                 class="w-5 h-5 text-secondary-color mr-3"
               ></i>
               <a
-                href="tel:+1234567890"
+                href="tel:+233541911123"
                 class="text-muted-color hover:text-default-color transition"
-                >(123) 456-7890</a
+                >0541911123</a
               >
             </div>
             <div class="flex items-center justify-center md:justify-start">
@@ -594,21 +665,21 @@
                 data-lucide="map-pin"
                 class="w-5 h-5 text-secondary-color mr-3"
               ></i>
-              <p class="text-muted-color">San Francisco, CA</p>
+              <p class="text-muted-color">Accra, Ghana</p>
             </div>
           </div>
 
           <!-- Social Links -->
           <div class="flex justify-center md:justify-end space-x-6">
             <a
-              href="#"
+              href="https://www.linkedin.com/in/mohammed-hussein-90792528b/"
               class="text-muted-color hover:text-primary-color transition transform hover:scale-110"
             >
               <i data-lucide="linkedin" class="w-6 h-6"></i>
             </a>
             <a
-              href="#"
-              class="text-muted-color hover:text-primary-color transition transform hover:scale-110"
+              href="https://github.com/jaymoh233"
+              class="text-muted-color hover:text-primary-color transition transform hover:scale-110 target=blank"
             >
               <i data-lucide="github" class="w-6 h-6"></i>
             </a>
@@ -624,7 +695,7 @@
         <div
           class="text-center mt-8 pt-6 border-t border-[var(--border-color)] text-sm text-muted-color"
         >
-          &copy; <span id="year"></span> Alex Thompson. All rights reserved.
+          &copy; <span id="year"></span> Mohammed Hussein. All rights reserved.
         </div>
       </div>
     </footer>
